2008-04-03  Dan Bernstein  <mitz@apple.com>

        - Tiger build fix

        * platform/mac/WebFontCache.mm:
        * rendering/RenderThemeMac.mm:

2008-04-03  Dan Bernstein  <mitz@apple.com>

        - Gtk build fix

        * platform/graphics/gtk/FontPlatformData.h:
        (WebCore::FontPlatformData::size):
        * platform/graphics/gtk/FontPlatformDataGtk.cpp:
        (WebCore::FontPlatformData::FontPlatformData):
        * platform/graphics/gtk/FontPlatformDataPango.cpp:
        (WebCore::FontPlatformData::FontPlatformData):

2008-04-03  Dan Bernstein  <mitz@apple.com>

        - project file updates in preparation for build fixes

        * GNUmakefile.am:
        * WebCore.pro:
        * WebCoreSources.bkl:

2008-04-03  Nicholas Shanks  <webkit@nickshanks.com>

        Updated by Dan Bernstein. Reviewed by Dave Hyatt.

        - WebCore part of fixing http://bugs.webkit.org/show_bug.cgi?id=6484
          font-weight does not properly support graded weights

        Tests to come: <http://bugs.webkit.org/show_bug.cgi?id=18306>

        Build fixes for platforms other than Mac and Windows to come.

        * WebCore.vcproj/WebCore.vcproj: Added FontDescription.cpp.

        * WebCore.xcodeproj/project.pbxproj: Ditto.

        * css/CSSComputedStyleDeclaration.cpp:
        (WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue): Changed to
        return additional weight value keywords 100, 200, 300, 500, 600, 800
        and 900.

        * css/CSSFontSelector.cpp:
        (WebCore::hashForFont): Changed the bold parameter into a weight
        parameter and added the weight to the string to be hashed.
        (WebCore::CSSFontSelector::addFontFaceRule): Changed to apply all CSS
        weight values to the font description.
        (WebCore::CSSFontSelector::getFontData): Updated the fallback logic to
        go through all weights equal or lighter from the desired weight. For
        SVG, to also consider heavier weights.
